@@ -1,4 +1,10 @@
 2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Report.pm: Set total_time to the time of amvault
+	  on an amvault run.
+	* perl/Amanda/Report/human.pm: Parse amvault FINISH line.
+	* server-src/amvault.pl Log a FINISH line.
+
+2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amcheck.c: Improve message.
 
 2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
